--- a/Face Emotion Recognition/Code/Training Data.ipynb
+++ b/Face Emotion Recognition/Code/Training Data.ipynb
@@ -46,8 +46,8 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
-    "TRAIN_DIR = 'D:\\\\Thesis work\\\\train\\\\train'\n",
-    "TEST_DIR = 'D:\\\\Thesis work\\\\test\\\\test'"
+    "TRAIN_DIR = '../DataSet/train'",
+    "TEST_DIR = '../DataSet/test'"
    ],
    "metadata": {
     "collapsed": false,
