--- a/Face Emotion Recognition/Code/Training Data.ipynb
+++ b/Face Emotion Recognition/Code/Training Data.ipynb
@@ -46,8 +46,8 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
-    "TRAIN_DIR = '../DataSet/train'",
-    "TEST_DIR = '../DataSet/test'"
+    "TRAIN_DIR = '../DataSet/train'\n",
+    "TEST_DIR = '../DataSet/test'\n"
    ],
    "metadata": {
     "collapsed": false,
